objects/Contract.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>AND(TODAY() &lt;= Contract_End_Date__c, 
TODAY() &gt;=  Contract_Start_Date__c,
NOT(ISPICKVAL(Status, &quot;Draft&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>TODAY() &gt;  Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>ContractsProject</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by the finance team to track progress on invoices issued to new contract customers.</description>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales Rep or CMS, owner of the opportunity that generated the contract</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Group__c</fullName>
        <label>Plan Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Essentials</fullName>
                </value>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Scale</fullName>
                </value>
                <value>
                    <fullName>Scaling company</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
                <value>
                    <fullName>New Idea</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Spaces__c</fullName>
        <inlineHelpText>List names of additional Subspaces for this contract.</inlineHelpText>
        <label>Subspaces</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_By__c</fullName>
        <description>Who on the finance team is working on the invoice</description>
        <inlineHelpText>Who on the finance team is working on the invoice</inlineHelpText>
        <label>Invoiced By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>ContractsOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Products__c</fullName>
        <formula>Opportunity__r.Max_Products__c</formula>
        <label>Max Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Version__c</fullName>
        <label>Plan Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Note__c</fullName>
        <description>Served for the support team to leave notes</description>
        <inlineHelpText>Support team notes</inlineHelpText>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Views__c</fullName>
        <formula>Opportunity__r.Private_Views__c</formula>
        <label>Private Views</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <inlineHelpText>Standard - customer signed our standard MSA without redlines
Custom - signed our MSA with changes or used 3rd party paper
Document details in Special Terms field</inlineHelpText>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_PB_ID__c</fullName>
        <label>Contract PB ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_ARR__c</fullName>
        <label>Contracted ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_MRR__c</fullName>
        <description>computed from ARR</description>
        <formula>Contracted_ARR__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>computed from ARR</inlineHelpText>
        <label>Contracted MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_NRR__c</fullName>
        <inlineHelpText>Contracted non-recuring Revenue</inlineHelpText>
        <label>Contracted NRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Columns__c</fullName>
        <formula>Opportunity__r.Custom_Columns__c</formula>
        <label>Custom Columns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioned_By__c</fullName>
        <description>Who from the support team provisioned this contract</description>
        <inlineHelpText>Who from the support team provisioned this contract</inlineHelpText>
        <label>Provisioned By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Groups__c</fullName>
        <formula>Opportunity__r.Release_Groups__c</formula>
        <label>Release Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_On_Premise__c</fullName>
        <formula>Opportunity__r.Jira_On_Premise__c</formula>
        <label>Jira On-Premise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Process__c</fullName>
        <label>Renewal Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Renewal</fullName>
                </value>
                <value>
                    <fullName>New Contract</fullName>
                </value>
                <value>
                    <fullName>Written Confirmation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Orders_Sum__c</fullName>
        <label>Test - Orders Sum</label>
        <summarizedField>Order.TotalAmount</summarizedField>
        <summaryForeignKey>Order.ContractId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jira_Integration__c</fullName>
        <formula>Opportunity__r.Jira_Integration__c</formula>
        <label>Jira Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Contributors__c</fullName>
        <formula>Opportunity__r.Max_Contributors__c</formula>
        <label>Max Contributors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Portals__c</fullName>
        <formula>Opportunity__r.Multiple_Portals__c</formula>
        <label>Multiple Portals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Columns__c</fullName>
        <formula>Opportunity__r.Competitor_Columns__c</formula>
        <label>Competitor Columns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_editors__c</fullName>
        <label>Contracted makers (editors)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contributors_limit__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Contributors limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Days__c</fullName>
        <label>Payment Terms (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name_Short__c</fullName>
        <formula>Project__r.Project_Name_Short__c</formula>
        <label>Project Name (Short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_gdrive_URL__c</fullName>
        <label>Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SAML_SSO_Enforcement__c</fullName>
        <formula>Opportunity__r.SAML_SSO_Enforcement__c</formula>
        <label>SAML SSO Enforcement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prioritization_Matrix__c</fullName>
        <formula>Opportunity__r.Prioritization_Matrix__c</formula>
        <label>Prioritization Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Sharing_Settings__c</fullName>
        <formula>Opportunity__r.Field_Sharing_Settings__c</formula>
        <label>Field Sharing Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_SSO_enforcement__c</fullName>
        <formula>Opportunity__r.Google_SSO_enforcement__c</formula>
        <label>Google SSO enforcement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Prioritization__c</fullName>
        <formula>Opportunity__r.Advanced_Prioritization__c</formula>
        <label>Advanced Prioritization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Product_Association__c</fullName>
        <formula>Opportunity__r.Field_Product_Association__c</formula>
        <label>Field Product Association</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Jira_Integrations__c</fullName>
        <formula>Opportunity__r.Multiple_Jira_Integrations__c</formula>
        <label>Multiple Jira Integrations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Tracker_Integration__c</fullName>
        <formula>Opportunity__r.Pivotal_Tracker_Integration__c</formula>
        <label>Pivotal Tracker Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Product_board_logo_on_portal__c</fullName>
        <formula>Opportunity__r.Hide_Product_board_logo_on_portal__c</formula>
        <label>Hide Product board logo on portal</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Contracted_ARR__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>v2</value>
        </filters>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Contracted_ARR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>New_Sales_Managed_Contracts</fullName>
        <columns>Sales_Rep__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Project__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_PB_ID__c</columns>
        <columns>Contract_gdrive_URL__c</columns>
        <columns>Contracted_ARR__c</columns>
        <columns>Contracted_MRR__c</columns>
        <columns>COMPANY_SIGNED_DATE</columns>
        <columns>Custom_Columns__c</columns>
        <filterScope>Everything</filterScope>
        <label>New Sales Managed Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>false</active>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_Contract</fullName>
        <active>true</active>
        <label>Custom Contract</label>
    </recordTypes>
    <validationRules>
        <fullName>Contract_PB_ID_cannot_be_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Contract_PB_ID__c = 0|| 
ISPICKVAL(Plan_Group__c, &quot;&quot;)||
ISPICKVAL( Plan_Version__c,&quot;&quot; ),
TEXT(Status) = &quot;Activated&quot;)</errorConditionFormula>
        <errorMessage>Contract PB ID cannot be 0. And Plan Group or Plan Version cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_date_is_after_Start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Contract_End_Date__c &lt; Contract_Start_Date__c</errorConditionFormula>
        <errorMessage>Contract End Date cannot be before Start Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contracted_editors_cannot_be_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Contracted_editors__c = 0, TEXT(Status) = &quot;Activated&quot;)</errorConditionFormula>
        <errorDisplayField>Contracted_editors__c</errorDisplayField>
        <errorMessage>Cannot be 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contributors_limit_cannot_be_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Contributors_limit__c = 0, TEXT(Status) = &quot;Activated&quot;)</errorConditionFormula>
        <errorDisplayField>Contributors_limit__c</errorDisplayField>
        <errorMessage>Cannot be 0</errorMessage>
    </validationRules>
</CustomObject>